fixed horizontal scroll issue on browsers with wide 'in-view' scrollbars

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -10,14 +10,18 @@ html, body {
   text-rendering: optimizeLegibility;
 }
 
-body:before {
-  content: '';
+body {
+  overflow-x: hidden;
 
-  display: block;
-  width: 100%;
-  height: 3px;
+  &:before {
+    content: '';
 
-  background: linear-gradient(90deg, $accent-green 0%, $accent-green 25%, $accent-pink 25%, $accent-pink 50%, $accent-blue 50%, $accent-blue 75%, $accent-orange 75%, $accent-orange 100%);
+    display: block;
+    width: 100%;
+    height: 3px;
+
+    background: linear-gradient(90deg, $accent-green 0%, $accent-green 25%, $accent-pink 25%, $accent-pink 50%, $accent-blue 50%, $accent-blue 75%, $accent-orange 75%, $accent-orange 100%);
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
